--- a/ui/src/app/globals.css
+++ b/ui/src/app/globals.css
@@ -1,7 +1,6 @@
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
   --foreground: #171717;
 }
 
@@ -13,7 +12,12 @@
 }
 
 body {
-  background: #fff;
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+  overflow: hidden;
+}
+
+button {
+  text-transform: none !important;
+  font-weight: 600 !important;
 }
